--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5433/License
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#spring.mvc.view.prefix = /WEB-INF/jsp/ThymeleafViewResolver
+#spring.mvc.view.suffix = .html
 
